--- a/index.html
+++ b/index.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
-<html="en">
+<html lang="uk">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Leblanc</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Головна</title>
 </head>
 <body>
+    <header>
+        <h1>Мій сайт</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Головна</a></li>
+                <li><a href="about.html">Про нас</a></li>
+                <li><a href="services.html">Послуги</a></li>
+                <li><a href="contact.html">Контакти</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h2>Ласкаво просимо на головну сторінку</h2>
+        <!-- Додайте тут вміст -->
+    </main>
+    <footer>
+        <p>&copy; 2024 Мій сайт</p>
+    </footer>
+</body>
+</html>
